# RetirementFundLifetimeEstimator

./: .gitignore  .pre-commit-config.yaml  README.md  ignoreme.txt  pyproject.toml  real data.txt  requirements-test.txt  requirements.txt
.github/workflows/: pytest.yml
backend/: .gitignore  README.md
backend/src/api/: data_api.py
backend/src/services/: calculations.py
backend/tests/: test_calculations.py  test_data_api.py
src/api/: data_api.py
src/models/: model.py
src/services/: Calculations.py  calculations.py
tests/: test_calculations.py  test_data_api.py
