[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retirement-fund-lifetime-estimator"
version = "1.0.0"
description = "A tool to estimate how long retirement funds will last"
authors = [{name = "Adam", email = "adam.abd13@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.8.0",
    "fastapi>=0.68.0"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
